<?xml version="1.0"?>
<package>
  <name>what_time</name>
  <version>0.1.0</version>
  <description>what_time package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>


  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>
